# meiken-sparrow

./: .gitignore  CMakeLists.txt  README.md
c10/: CMakeLists.txt
c10/a/: meiken.sp
c10/a/cli/: cli.c
c10/a/compiler/: compiler.c  compiler.h  debug.c  debug.h
c10/a/gc/: gc.c
c10/a/object/: class.c  meta_obj.c  meta_obj.h  obj_fn.c  obj_list.c  obj_map.c
c10/a/parser/: parser.c
c10/a/vm/: core.c  core.h  vm.c  vm.h
c2/: CMakeLists.txt
c2/a/include/: common.h  utils.c  utils.h
c2/b/include/: common.h  utils.c  utils.h
c2/b/vm/: core.c  core.h  vm.h
c2/c/include/: utils.c
c2/c/vm/: core.c  vm.c  vm.h
c2/d/include/: unicodeUtf8.c  unicodeUtf8.h  utils.h
c2/d/vm/: core.h  vm.c
c2/e/include/: utils.c
c2/e/parser/: parser.c  parser.h
c2/e/vm/: core.c  vm.c
c2/f/cli/: cli.c
c2/f/include/: utils.h
c2/f/parser/: parser.c
c2/f/vm/: core.c  vm.c  vm.h
c3/: CMakeLists.txt
c3/a/cli/: cli.c
c3/a/include/: common.h
c3/a/object/: class.h  header_obj.c  header_obj.h  obj_fn.h
c3/a/parser/: parser.c  parser.h  token.list
c3/a/vm/: vm.c  vm.h
c3/b/cli/: cli.c
c3/b/include/: common.h
c3/b/object/: class.h  header_obj.c
c3/b/parser/: parser.c  parser.h
c3/b/vm/: vm.c
c3/c/cli/: cli.c
c3/c/object/: class.c  class.h  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_map.c  obj_range.c  obj_range.h  obj_string.h  obj_thread.h
c3/c/vm/: core.c  vm.c  vm.h
c4/: CMakeLists.txt
c4/a/cli/: cli.c
c4/a/compiler/: compiler.c
c4/a/object/: class.c  class.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h
c4/a/parser/: parser.c
c4/a/vm/: core.c  core.h  vm.c  vm.h
c4/b/: sample.sp
c4/b/cli/: cli.c
c4/b/compiler/: compiler.c  compiler.h
c4/b/object/: class.c  class.h  header_obj.h  obj_fn.c  obj_range.c
c4/b/parser/: parser.c  parser.h
c4/b/vm/: core.c  core.h  vm.c  vm.h
c4/c/cli/: cli.c
c4/c/compiler/: compiler.c  compiler.h
c4/c/object/: class.h  obj_fn.c  obj_map.c  obj_map.h  obj_thread.c
c4/c/vm/: core.c  core.h
c5/: test  test.c
c6/: CMakeLists.txt
c6/a/cli/: cli.c
c6/a/compiler/: compiler.c  compiler.h
c6/a/object/: obj_fn.h
c6/a/vm/: core.c  core.h
c6/b/cli/: cli.c
c6/b/compiler/: compiler.c
c6/b/parser/: parser.c
c6/b/vm/: core.c  vm.c
c6/c/cli/: cli.c
c6/c/compiler/: compiler.c  compiler.h
c6/c/object/: meta_obj.h  obj_fn.h  obj_list.h
c6/c/vm/: core.c  vm.h
c6/d/cli/: cli.c
c6/d/compiler/: compiler.c
c6/d/object/: obj_map.c  obj_thread.h
c6/d/vm/: core.c  vm.c
c6/e/cli/: cli.c
c6/e/compiler/: compiler.c
c6/e/object/: meta_obj.h
c6/f/compiler/: compiler.c
c6/f/vm/: core.c  core.h
c6/g/compiler/: compiler.c
c6/g/include/: utils.c
c6/g/object/: class.c
c6/h/compiler/: compiler.c
c6/i/: makefile
c6/i/compiler/: compiler.c
c6/j/compiler/: compiler.c
c6/j/include/: unicodeUtf8.c
c6/j/vm/: vm.c
c6/k/compiler/: compiler.c
c6/k/parser/: token.list
c6/l/compiler/: compiler.c
c6/m/compiler/: compiler.c
c6/m/vm/: core.c
c6/n/compiler/: compiler.c
c6/n/object/: class.h
c6/n/tmp/: t.sp
c6/n/vm/: vm.h
c6/o/cli/: cli.c
c6/o/compiler/: compiler.c
c6/p/compiler/: compiler.c  compiler.h
c6/q/compiler/: compiler.c
c6/r/compiler/: compiler.c
c6/r/object/: obj_fn.c  obj_range.h
c6/s/compiler/: compiler.c
c6/t/vm/: core.h
c7/: CMakeLists.txt
c7/a/object/: class.c
c7/a/vm/: vm.c
c7/b/compiler/: compiler.h
c7/b/parser/: parser.c  parser.h
c7/b/vm/: vm.c
c7/c/compiler/: compiler.h
c7/c/include/: common.h
c7/c/vm/: core.c  vm.c
c7/d/compiler/: compiler.c
c7/d/object/: class.h
c7/e/object/: obj_list.c
c7/e/vm/: core.c  vm.c
c8/: CMakeLists.txt
c8/a/cli/: cli.c
c8/a/compiler/: compiler.c  compiler.h
c8/a/object/: class.h  obj_string.c
c8/a/vm/: core.c  core.h
c8/b/compiler/: compiler.c
c8/b/object/: class.h
c8/b/vm/: core.c
c8/c/vm/: core.c
c8/d/vm/: core.c
c8/e/vm/: core.c
c8/f/cli/: cli.c
c8/f/vm/: core.c
c8/g/object/: class.h
c8/g/vm/: core.c  vm.c
c8/h/vm/: core.c  core.h
c8/i/object/: class.h
c8/i/vm/: core.c
c8/j/object/: meta_obj.c
c8/j/vm/: core.c  opcode.inc
c8/k/cli/: cli.c
c8/k/compiler/: compiler.c
c8/k/object/: class.c  obj_string.h
c8/k/vm/: core.c  vm.h
c8/l/cli/: cli.c
c8/l/compiler/: compiler.c  compiler.h
c8/l/include/: utils.c
c8/l/object/: class.c  class.h  header_obj.h  meta_obj.c  obj_fn.h  obj_list.h  obj_map.c  obj_thread.c  obj_thread.h
c8/l/vm/: core.c  vm.c  vm.h
c9/: CMakeLists.txt
c9/m/: manager.sp
c9/m/cli/: cli.c
c9/m/compiler/: compiler.c
c9/m/gc/: gc.c  gc.h
c9/m/include/: utils.c
c9/m/object/: class.c  header_obj.c  meta_obj.c  obj_list.c  obj_map.c  obj_map.h  obj_range.c  obj_string.h
c9/m/vm/: core.c  vm.c  vm.h
stepByStep/c2/a/include/: common.h  utils.c
stepByStep/c2/b/include/: utils.c
stepByStep/c2/c/include/: common.h  utils.c  utils.h
stepByStep/c2/c/vm/: core.c  vm.h
stepByStep/c2/d/include/: utils.h
stepByStep/c2/d/vm/: vm.h
stepByStep/c2/e/include/: common.h  unicodeUtf8.c  utils.c  utils.h
stepByStep/c2/e/parser/: parser.c  parser.h
stepByStep/c2/e/vm/: core.h  (+1 more)
stepByStep/c2/f/: makefile  spr
stepByStep/c3/: CMakeLists.txt
stepByStep/c4/: CMakeLists.txt
stepByStep/c4/a/cli/: cli.c
stepByStep/c4/a/include/: common.h
stepByStep/c4/a/object/: class.c  class.h  header_obj.h  meta_obj.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.h  obj_thread.c  obj_thread.h
stepByStep/c4/a/parser/: parser.h
stepByStep/c4/a/vm/: core.c  core.h  vm.c  vm.h
stepByStep/c4/b/: CMakeLists.txt
stepByStep/c4/b/compiler/: compiler.c  compiler.h
stepByStep/c4/b/object/: class.c  class.h  header_obj.c  meta_obj.c  meta_obj.h  obj_fn.c  obj_list.c  obj_range.c  obj_thread.c  obj_thread.h
stepByStep/c4/b/parser/: parser.c
stepByStep/c4/b/vm/: core.c  core.h
stepByStep/c4/c/cli/: cli.c
stepByStep/c4/c/compiler/: compiler.c
stepByStep/c4/c/include/: unicodeUtf8.c
stepByStep/c4/c/parser/: parser.h
stepByStep/c4/c/vm/: core.c
stepByStep/c6/e/: makefile  sample.sp
(+68 files in other folders)
