cmake_minimum_required(VERSION 3.16)
project(stepByStep C)
include_directories("${PROJECT_SOURCE_DIR}")
set(CMAKE_C_STANDARD 99)


#add_executable(cli-main c3/a/cli/cli.c
#        c3/a/include/unicodeUtf8.c c3/a/include/utils.c
#        c3/a/object/header_obj.c c3/a/object/meta_obj.c c3/a/object/obj_fn.c   c3/a/object/obj_string.c
#        c3/a/parser/parser.c
#        c3/a/vm/core.c c3/a/vm/vm.c
#        )

#add_executable(cli-main c3/a/cli/cli.c
#        c3/a/include/unicodeUtf8.c c3/a/include/utils.c
#        c3/a/object/header_obj.c c3/a/object/meta_obj.c c3/a/object/obj_fn.c   c3/a/object/obj_string.c
#        c3/a/parser/parser.c
#        c3/a/vm/core.c c3/a/vm/vm.c
#        )


#add_executable(cli-main c3/c/cli/cli.c
#        c3/c/include/unicodeUtf8.c c3/c/include/utils.c
#        c3/c/object/class.c c3/c/object/header_obj.c c3/c/object/meta_obj.c c3/c/object/obj_fn.c c3/c/object/obj_list.c c3/c/object/obj_map.c c3/c/object/obj_range.c c3/c/object/obj_string.c c3/c/object/obj_thread.c
#        c3/c/parser/parser.c
#        c3/c/vm/core.c c3/c/vm/vm.c
#        )



