cmake_minimum_required(VERSION 3.16)
project(stepByStep C)
include_directories("${PROJECT_SOURCE_DIR}")
set(CMAKE_C_STANDARD 99)


#add_executable(cli-main c4/a/cli/cli.c
#        c4/a/include/unicodeUtf8.c c4/a/include/utils.c
#        c4/a/object/class.c c4/a/object/header_obj.c c4/a/object/meta_obj.c c4/a/object/obj_fn.c c4/a/object/obj_list.c c4/a/object/obj_map.c c4/a/object/obj_range.c c4/a/object/obj_string.c c4/a/object/obj_thread.c
#        c4/a/parser/parser.c
#        c4/a/vm/core.c c4/a/vm/vm.c
#        )


#add_executable(cli-main c4/a/cli/cli.c
#        c4/a/include/unicodeUtf8.c c4/a/include/utils.c
#        c4/a/compiler/compiler.c
#        c4/a/object/class.c c4/a/object/header_obj.c c4/a/object/meta_obj.c c4/a/object/obj_fn.c c4/a/object/obj_list.c c4/a/object/obj_map.c c4/a/object/obj_range.c c4/a/object/obj_string.c c4/a/object/obj_thread.c
#        c4/a/parser/parser.c
#        c4/a/vm/core.c c4/a/vm/vm.c
#        )

#
#add_executable(cli-main c4/c/cli/cli.c
#        c4/c/include/unicodeUtf8.c c4/c/include/utils.c
#        c4/c/compiler/compiler.c
#        c4/c/object/class.c c4/c/object/header_obj.c c4/c/object/meta_obj.c c4/c/object/obj_fn.c c4/c/object/obj_list.c c4/c/object/obj_map.c c4/c/object/obj_range.c c4/c/object/obj_string.c c4/c/object/obj_thread.c
#        c4/c/parser/parser.c
#        c4/c/vm/core.c c4/c/vm/vm.c
#        )





